--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
       <meta charset="UTF-8">
-      <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<!--       <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" /> -->
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <link href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" rel="stylesheet"/>
       <link rel="stylesheet" type="text/css" href="./styles.css">
      <title>isaac</title>
     </head>
