--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h3 class="footer__title">Author</h3>
   
                 <ul class="footer__list">
-                    <li>Enc222-0121/2019</li>
+                    <li>Enc222-0XXX/20XX</li>
                     <li> WAINAINA ISAAC</li>
                     <li></li>
                 </ul> 
@@ -119,5 +119,5 @@
      
     </section>
       
-    </footer> -->
+    </footer> 
 </html> 
